--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.main-container{
+  text-align: center;
+}
+.title{
+  color: rgb(76, 76, 212);
+  font-family: 'Josefin Sans', sans-serif;
+}
+.table-container{
+  margin: 25px auto 0 auto;
+}
+.btnedelete{
+
+margin: 30px 0 30px 0;
+
+  }
+.tash{
+  width: 20px;
+  height: 20px;
+  margin: 0 20px 0 70px;
+ 
+  }
+.edit{
+  width: 20px;
+  height: 20px;    
+  
+  }
